# waremax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  specs.md  specs1.md
apps/frontend/: .env.example  Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
apps/frontend/.astro/: settings.json
apps/frontend/.astro/astro/: content.d.ts
apps/frontend/src/components/: EventLog.vue  WarehouseCanvas.vue
apps/frontend/src/composables/: useWarehouseCanvas.ts
apps/frontend/src/content/: config.ts
apps/frontend/src/islands/: SimulationDashboard.vue
apps/frontend/src/layouts/: Layout.astro
apps/frontend/src/pages/: index.astro  simulation.astro
apps/frontend/src/stores/: simulation.ts
apps/frontend/src/styles/: global.css
crates/waremax-analysis/: Cargo.toml  README.md
crates/waremax-analysis/src/: analyzer.rs  anomaly.rs  attribution.rs  bottleneck.rs  critical_path.rs  lib.rs  reporter.rs
crates/waremax-api/: Cargo.toml  README.md
crates/waremax-api-server/: Cargo.toml  README.md
crates/waremax-api-server/src/: main.rs
crates/waremax-api/frontend/src/components/: MetricsPanel.vue
crates/waremax-api/src/: lib.rs  server.rs  session.rs  simulation.rs  state.rs  types.rs
crates/waremax-api/src/handlers/: api.rs  mod.rs  websocket.rs
crates/waremax-config/: Cargo.toml  README.md
crates/waremax-config/src/: lib.rs  map_config.rs  scenario.rs  storage_config.rs  validation.rs
crates/waremax-core/: Cargo.toml  README.md
crates/waremax-core/src/: error.rs  event.rs  id.rs  kernel.rs  lib.rs  rng.rs  time.rs
crates/waremax-entities/: Cargo.toml  README.md
crates/waremax-entities/src/: charging_station.rs  lib.rs  maintenance_station.rs  order.rs  robot.rs  station.rs  task.rs
crates/waremax-gym/: Cargo.toml  README.md  pyproject.toml
crates/waremax-gym/python/: baseline.py  candidate_policy.py  experiments.py  learning_curves.py  metrics.py  requirements.txt  smoke_test.py  train_ppo.py  waremax_alloc_env.py
crates/waremax-gym/python/results/: learning_curves.csv  runs.csv  summary.csv  tables.md
crates/waremax-gym/src/: lib.rs
crates/waremax-map/: Cargo.toml  README.md
crates/waremax-map/src/: deadlock.rs  graph.rs  lib.rs  position.rs  reservation.rs  routing.rs  traffic.rs
crates/waremax-metrics/: Cargo.toml  README.md
crates/waremax-metrics/src/: charts.rs  collector.rs  event_log.rs  export.rs  html_report.rs  lib.rs  pdf_report.rs  report.rs  timeseries.rs  trace.rs
crates/waremax-policies/: Cargo.toml  README.md
crates/waremax-policies/src/: allocation.rs  batching.rs  deadlock.rs  destination.rs  lib.rs  priority.rs  robot_state_machine.rs  station.rs  traffic.rs  traffic_control.rs  traits.rs
crates/waremax-rl/: Cargo.toml  README.md
crates/waremax-rl/src/: env.rs  lib.rs  observation.rs  policy.rs  protocol.rs  reward.rs
crates/waremax-rl/tests/: determinism.rs
crates/waremax-sim/: Cargo.toml  README.md
crates/waremax-sim/src/: dashboard.rs  distribution_factory.rs  distributions.rs  handlers.rs  lib.rs  policy_factory.rs  replay.rs  runner.rs  snapshot.rs  world.rs
crates/waremax-statemachine/: Cargo.toml  README.md
crates/waremax-statemachine/src/: lib.rs
crates/waremax-storage/: Cargo.toml  README.md
crates/waremax-storage/src/: inventory.rs  lib.rs  rack.rs  sku.rs
crates/waremax-testing/: Cargo.toml  README.md
crates/waremax-testing/src/: ab_testing.rs  benchmark.rs  comparison.rs  generator.rs  lib.rs  presets.rs  runner.rs
crates/waremax-ui/: Cargo.toml
crates/waremax-ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
crates/waremax-ui/frontend/src/: App.vue  style.css
crates/waremax-ui/frontend/src/components/: ConfigPanel.vue  ControlPanel.vue  EventLog.vue  WarehouseCanvas.vue
crates/waremax-ui/frontend/src/composables/: useWarehouseCanvas.ts
crates/waremax-ui/frontend/src/stores/: simulation.ts
crates/waremax-ui/src/: embed.rs  lib.rs  server.rs  session.rs  simulation.rs  types.rs
crates/waremax-ui/src/handlers/: api.rs  mod.rs  static_files.rs  websocket.rs
docker/: Dockerfile.api  captain-definition.api  captain-definition.frontend
docs/: dispatching-policies.md  metrics-and-logs.md  overview.md  roadmap.md  scenario-config.md  simulation-model.md  system-architecture.md
documentation/: mkdocs.yml
documentation/docs/: changelog.md  faq.md  index.md
documentation/docs/cli/: ab-test.md  analyze.md  benchmark.md  compare.md  demo.md  generate.md  index.md  list-presets.md  run.md  stress-test.md  sweep.md  validate.md
documentation/docs/concepts/: index.md
documentation/docs/concepts/metrics/: congestion-metrics.md  index.md  kpis.md  rca.md  timeseries.md
documentation/docs/concepts/policies/: batching.md  index.md  priority.md  station-assignment.md  task-allocation.md  traffic-policies.md
documentation/docs/concepts/robots/: battery.md  index.md  maintenance.md  movement.md  task-lifecycle.md
documentation/docs/concepts/simulation/: determinism.md  discrete-event.md  events.md  index.md  time-model.md
documentation/docs/concepts/traffic/: capacity.md  congestion.md  deadlock.md  index.md  reservations.md
documentation/docs/configuration/: battery.md  index.md  maintenance.md  metrics.md  orders.md  policies.md  robots.md  routing.md  scenario-schema.md  simulation.md  stations.md  traffic.md
documentation/docs/developer/: index.md
documentation/docs/examples/: capacity-studies.md  index.md  policy-comparisons.md  scenarios.md
documentation/docs/getting-started/: first-simulation.md  index.md  installation.md  quick-start.md  understanding-output.md
documentation/docs/includes/: abbreviations.md
documentation/docs/stylesheets/: extra.css
documentation/docs/tutorials/: index.md
documentation/docs/user-guide/: export-formats.md  index.md  map-configuration.md  presets.md  running-simulations.md  scenario-files.md  storage-configuration.md
examples/simple_scenario/: scenario.yaml
scripts/: deploy.sh  publish-crates.sh
src/: main.rs
(+31 files in other folders)
