[package]
name = "waremax-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum-based API library for Waremax simulation"

[dependencies]
# Internal crates
waremax-core = { workspace = true }
waremax-map = { workspace = true }
waremax-entities = { workspace = true }
waremax-config = { workspace = true }
waremax-metrics = { workspace = true }
waremax-sim = { workspace = true }
waremax-testing = { workspace = true }
waremax-statemachine = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging/tracing
tracing = "0.1"
