[package]
name = "waremax-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loading and validation for Waremax"

[dependencies]
waremax-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
