[package]
name = "waremax-entities"
version.workspace = true
edition.workspace = true
description = "Entity types for Waremax simulation (robots, stations, orders, tasks)"

[dependencies]
waremax-core = { workspace = true }
waremax-storage = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
