[package]
name = "waremax-metrics"
version.workspace = true
edition.workspace = true
description = "Metrics collection and reporting for Waremax"

[dependencies]
waremax-core = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }

# v3: Chart and report generation
plotters = { version = "0.3", default-features = false, features = ["bitmap_encoder", "line_series"] }
plotters-bitmap = "0.3"
tera = "1.19"
base64 = "0.22"
printpdf = "0.7"

[dev-dependencies]
tempfile = "3.10"
