[package]
name = "waremax-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage, racks, bins, and inventory management for Waremax"

[dependencies]
waremax-core = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
