[package]
name = "waremax-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing and benchmarking framework for Waremax"

[dependencies]
waremax-core = { workspace = true }
waremax-config = { workspace = true }
waremax-sim = { workspace = true }
waremax-metrics = { workspace = true }
waremax-map = { workspace = true }
waremax-entities = { workspace = true }
waremax-storage = { workspace = true }
waremax-policies = { workspace = true }

# Parallel execution
rayon = "1.10"

# Statistical functions
statrs = "0.17"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Random number generation
rand = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
